--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -50,8 +50,8 @@
                 <div class="sections">
                     <!--                       <h3> Browse </h3>-->
                     <ul>
-                        <li class="active"><a href="home.html"> <i class="uil-home-alt"></i> 首页 </a></li>
-                        <li><a href="browse-catagroies.html"> <i class="uil-layers"></i> 分类 </a></li>
+                        <li class="active"><a href="index.html"> <i class="uil-home-alt"></i> 首页 </a></li>
+                        <li><a href="catagroies.html"> <i class="uil-layers"></i> 分类 </a></li>
                         <li><a href="browse-channals.html"> <i class="uil-users-alt"></i> 个人中心 </a></li>
                     </ul>
                 </div>
@@ -72,9 +72,9 @@
 
 
                 <div id="foot" style="margin-top: 200px">
-                    <div class="foot-content">
-                        <p>© 2020 <strong>Movies Pro</strong>. All Rights Reserved. </p>
-                    </div>
+<!--                    <div class="foot-content">-->
+<!--                        <p>© 2020 <strong>Movies Pro</strong>. All Rights Reserved. </p>-->
+<!--                    </div>-->
                 </div>
 
 
@@ -255,8 +255,161 @@
                 </div>
 
                 <ul id="recommend" class="uk-slider-items uk-child-width-1-4@m uk-child-width-1-3@s uk-grid">
+                    <li>
+                        <a href="single-video.html" class="video-post">
+                            <!-- Blog Post Thumbnail -->
+                            <div class="video-post-thumbnail">
+                                <span class="video-post-count">1.4M</span>
+                                <span class="video-post-time">23:00</span>
+                                <span class="play-btn-trigger"></span>
+                                <!-- option menu -->
+                                <span class="btn-option">
+                                            <i class="icon-feather-more-vertical"></i>
+                                        </span>
+                                <div class="dropdown-option-nav"
+                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
+                                    <ul>
+                                        <li>
+                                            <span> <i class="uil-history"></i> Watch Later</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
+                                        </li>
+                                    </ul>
+                                </div>
 
+                                <img src="assets/images/video-thumbal/img-1.png" alt="">
 
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="single-video.html" class="video-post">
+                            <!-- Blog Post Thumbnail -->
+                            <div class="video-post-thumbnail">
+                                <span class="video-post-count">1.4M</span>
+                                <span class="video-post-time">23:00</span>
+                                <span class="play-btn-trigger"></span>
+                                <!-- option menu -->
+                                <span class="btn-option">
+                                            <i class="icon-feather-more-vertical"></i>
+                                        </span>
+                                <div class="dropdown-option-nav"
+                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
+                                    <ul>
+                                        <li>
+                                            <span> <i class="uil-history"></i> Watch Later</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <img src="assets/images/video-thumbal/img-1.png" alt="">
+
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="single-video.html" class="video-post">
+                            <!-- Blog Post Thumbnail -->
+                            <div class="video-post-thumbnail">
+                                <span class="video-post-count">1.4M</span>
+                                <span class="video-post-time">23:00</span>
+                                <span class="play-btn-trigger"></span>
+                                <!-- option menu -->
+                                <span class="btn-option">
+                                            <i class="icon-feather-more-vertical"></i>
+                                        </span>
+                                <div class="dropdown-option-nav"
+                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
+                                    <ul>
+                                        <li>
+                                            <span> <i class="uil-history"></i> Watch Later</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <img src="assets/images/video-thumbal/img-1.png" alt="">
+
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="single-video.html" class="video-post">
+                            <!-- Blog Post Thumbnail -->
+                            <div class="video-post-thumbnail">
+                                <span class="video-post-count">1.4M</span>
+                                <span class="video-post-time">23:00</span>
+                                <span class="play-btn-trigger"></span>
+                                <!-- option menu -->
+                                <span class="btn-option">
+                                            <i class="icon-feather-more-vertical"></i>
+                                        </span>
+                                <div class="dropdown-option-nav"
+                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
+                                    <ul>
+                                        <li>
+                                            <span> <i class="uil-history"></i> Watch Later</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <img src="assets/images/video-thumbal/img-1.png" alt="">
+
+                            </div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="single-video.html" class="video-post">
+                            <!-- Blog Post Thumbnail -->
+                            <div class="video-post-thumbnail">
+                                <span class="video-post-count">1.4M</span>
+                                <span class="video-post-time">23:00</span>
+                                <span class="play-btn-trigger"></span>
+                                <!-- option menu -->
+                                <span class="btn-option">
+                                            <i class="icon-feather-more-vertical"></i>
+                                        </span>
+                                <div class="dropdown-option-nav"
+                                     uk-dropdown="pos: bottom-right ;mode : hover ;animation: uk-animation-slide-bottom-small">
+                                    <ul>
+                                        <li>
+                                            <span> <i class="uil-history"></i> Watch Later</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-bookmark"></i> Add Bookmark</span>
+                                        </li>
+                                        <li>
+                                            <span> <i class="uil-share-alt"></i> Share Your Friends</span>
+                                        </li>
+                                    </ul>
+                                </div>
+
+                                <img src="assets/images/video-thumbal/img-1.png" alt="">
+
+                            </div>
+                        </a>
+                    </li>
                 </ul>
 
             </div>
