--- a/src/main/resources/movie-detail.html
+++ b/src/main/resources/movie-detail.html
@@ -204,7 +204,7 @@
                                   uk-toggle="target: #video-box ; cls: video-resized-hedden uk-animation-slide-left"></span>
 
                         <div class="embed-video">
-                            <iframe src="" frameborder="0"
+                            <iframe src="http://m.v.qq.com/x/page/z/h/2/z0511hh0nh2.html" frameborder="0"
                                     uk-video="automute: true" allowfullscreen uk-responsive></iframe>
                         </div>
                     </div>
@@ -429,9 +429,9 @@
            ================================================== -->
             <div class="footer">
                 <div class="uk-grid-collapse" uk-grid>
-                    <div class="uk-width-expand@s uk-first-column">
-                        <p>Copyright &copy; 2020.Company name All rights reserved.</p>
-                    </div>
+<!--                    <div class="uk-width-expand@s uk-first-column">-->
+<!--                        <p>Copyright &copy; 2020.Company name All rights reserved.</p>-->
+<!--                    </div>-->
                     <div class="uk-width-auto@s">
                         <nav class="footer-nav-icon">
                             <ul>
